[project]
name = "ethosai"
version = "0.1.0"
description = "Autonomous Governance & Research Suite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "crewai>=1.13.0",
    "crewai-tools>=1.13.0",
    "google-search-results>=2.4.2",
    "langchain>=1.2.15",
    "pypdf>=6.9.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.56.0",
    "python-dotenv>=1.0.1",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "plotly>=6.7.0",
]
